# shape-it

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README  README.md
cmake/modules/: FindOpenBabel2.cmakebk  FindOpenBabel3.cmake  FindRDKit.cmake
docker/: Dockerfile
example_note/: Align_CDK2_molecule_with_shape-it.ipynb
include/: alignLib.h  alignmentInfo.h  atomGaussian.h  bestResults.h  config.h  coordinate.h  gaussianVolume.h  mainErr.h  moleculeRotation.h  options.h  parseCommandLine.h  printHeader.h  printUsage.h  shapeAlignment.h  siMath.h  solutionInfo.h
infrastructure/pyshapeit/: build.sh  meta.yaml
pyshapeit/: __init__.py  basic_test.py
src/: alignLib.cpp  alignmentInfo.cpp  atomGaussian.cpp  basic_tests.cpp  bestResults.cpp  catch_main.cpp  coordinate.cpp  gaussianVolume.cpp  gaussianVolume.cppbk  main.cpp  mainErr.cpp  moleculeRotation.cpp  options.cpp  parseCommandLine.cpp  printHeader.cpp  printUsage.cpp  shapeAlignment.cpp  siMath.cpp  solutionInfo.cpp
src/Wrap/: CMakeLists.txt  cpyshapeit.cpp
